--- a/tools/generator/.gitignore
+++ b/tools/generator/.gitignore
@@ -4,14 +4,12 @@
 *.output
 *.run
 *.o
-lexer.ml
-parser.ml
+jdl_lexer.ml
+jdl_parser.ml
+jdl_parser.mli
 *.opt
 *~
 *.omc
 .omakedb*
-generor
-parser.mli
 jenerator
-*.idl
-*.cpp
+
