--- a/jubatus.pc.in
+++ b/jubatus.pc.in
@@ -8,4 +8,4 @@ Description: Framework and Library for Distributed Online Machine Learning
 Version: @VERSION@
 Requires: pficommon >= 1.3.1, libglog >= 0.3.0
 Cflags: -I${includedir}
-Libs: -L${libdir} -ljubatus
+Libs: -L${libdir} -ljubatus_framework
