add pficommon install to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,12 @@ compiler:
 before_install:
   - "sudo apt-get -qq update"
   - "sudo apt-get -qq install libmsgpack-dev libevent-dev"
-#  - "git clone git://github.com/pfi/pficommon.git"
-#  - "wget http://google-glog.googlecode.com/files/glog-0.3.2.tar.gz"
+  - "wget http://google-glog.googlecode.com/files/glog-0.3.2.tar.gz"
+  - "tar xzf glog-0.3.2.tar.gz && cd glog-0.3.2 && ./configure && make && sudo make install"
+  - "cd -"
+  - "git clone git://github.com/pfi/pficommon.git"
+  - "cd pficommon && ./waf configure && ./waf build && ./waf install"
+  - "cd -"
 
 before_script:
   - ./waf configure --disable-re2
