--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - "tar xzf glog-0.3.2.tar.gz && cd glog-0.3.2 && ./configure && make && sudo make install"
   - "cd -"
   - "git clone git://github.com/pfi/pficommon.git"
-  - "cd pficommon && ./waf configure && ./waf build && ./waf install"
+  - "cd pficommon && ./waf configure && ./waf build && sudo ./waf install"
   - "cd -"
 
 before_script:
