--- a/tools/packaging/rpm/rpmbuild/glog/SPECS/glog.spec.in
+++ b/tools/packaging/rpm/rpmbuild/glog/SPECS/glog.spec.in
@@ -16,7 +16,7 @@ Summary:	Headers and libraries for glog
 Requires:	%{name} = %{version}-%{release}
 
 %description
-The glog library implements application-level logging. 
+The glog library implements application-level logging.
 This library provides logging APIs based on C++-style streams and various helper macros.
 
 %description devel
@@ -55,4 +55,4 @@ This package provides headers and libraries needed to develop applications using
 
 %changelog
 * Tue Aug 14 2012 Kenichi Maehashi <mockbuild@jubat.us>
-+ Initial version
+- Initial version
