--- a/tools/packaging/rpm/rpmbuild/jubatus-client/SPECS/jubatus-client.spec.in
+++ b/tools/packaging/rpm/rpmbuild/jubatus-client/SPECS/jubatus-client.spec.in
@@ -31,7 +31,7 @@ This package provides Jubatus C++ client headers.
 
 %install
 %{__rm} -rf %{buildroot}
-%{__mkdir_p} %{buildroot}%{_includedir}/jubatus/client
+%{__install} -d %{buildroot}%{_includedir}/jubatus/client
 %{__cp} -rp cpp/* %{buildroot}%{_includedir}/jubatus/client
 
 %clean
@@ -43,4 +43,4 @@ This package provides Jubatus C++ client headers.
 
 %changelog
 * Tue Aug 14 2012 Kenichi Maehashi <mockbuild@jubat.us>
-+ Initial version
+- Initial version
