--- a/tools/packaging/rpm/rpmbuild/jubatus-release/SPECS/jubatus-release.spec.in
+++ b/tools/packaging/rpm/rpmbuild/jubatus-release/SPECS/jubatus-release.spec.in
@@ -29,7 +29,7 @@ Yum Repository for Jubatus and its dependencies.
 
 %install
 %{__rm} -rf %{buildroot}
-%{__mkdir_p} %{buildroot}%{_sysconfdir}/yum.repos.d
+%{__install} -d %{buildroot}%{_sysconfdir}/yum.repos.d
 %{__cp} %{SOURCE0} %{buildroot}%{_sysconfdir}/yum.repos.d
 
 %clean
@@ -41,4 +41,4 @@ Yum Repository for Jubatus and its dependencies.
 
 %changelog
 * Tue Aug 14 2012 Kenichi Maehashi <mockbuild@jubat.us>
-+ Initial version
+- Initial version
