--- a/tools/packaging/rpm/rpmbuild/jubatus/SPECS/jubatus.spec.in
+++ b/tools/packaging/rpm/rpmbuild/jubatus/SPECS/jubatus.spec.in
@@ -17,7 +17,7 @@ BuildRoot:	%(mktemp -ud %{_tmppath}/%{name}-%{version}-%{release}-XXXXXX)
 BuildRequires:	pficommon-devel >= 1.3.1
 BuildRequires:	msgpack-devel
 BuildRequires:	libevent-devel >= 1.4
-BuildRequires:	glog-devel
+BuildRequires:	glog-devel >= 0.3.0
 BuildRequires:	zookeeper-client-devel
 BuildRequires:	re2-devel
 BuildRequires:	ux-devel
@@ -28,7 +28,7 @@ BuildRequires:	python >= 2.6
 Requires:		pficommon >= 1.3.1
 Requires:		msgpack
 Requires:		libevent >= 1.4
-Requires:		glog
+Requires:		glog >= 0.3.0
 Requires:		zookeeper-client
 Requires:		re2
 Requires:		ux
@@ -86,4 +86,4 @@ This package provides headers and libraries needed to develop new engines or plu
 
 %changelog
 * Tue Aug 14 2012 Kenichi Maehashi <mockbuild@jubat.us>
-+ Initial version
+- Initial version
