--- a/tools/packaging/rpm/rpmbuild/mecab-ipadic/SPECS/mecab-ipadic.spec.in
+++ b/tools/packaging/rpm/rpmbuild/mecab-ipadic/SPECS/mecab-ipadic.spec.in
@@ -48,4 +48,4 @@ IPA Dictionary for MeCab.
 
 %changelog
 * Tue Aug 14 2012 Kenichi Maehashi <mockbuild@jubat.us>
-+ Initial version
+- Initial version
