--- a/tools/packaging/rpm/rpmbuild/mecab/SPECS/mecab.spec.in
+++ b/tools/packaging/rpm/rpmbuild/mecab/SPECS/mecab.spec.in
@@ -68,4 +68,4 @@ This package provides headers and libraries needed to develop applications using
 
 %changelog
 * Tue Aug 14 2012 Kenichi Maehashi <mockbuild@jubat.us>
-+ Initial version
+- Initial version
