--- a/tools/packaging/rpm/rpmbuild/pficommon/SPECS/pficommon.spec.in
+++ b/tools/packaging/rpm/rpmbuild/pficommon/SPECS/pficommon.spec.in
@@ -64,4 +64,4 @@ This package provides headers and libraries needed to develop applications using
 
 %changelog
 * Tue Aug 14 2012 Kenichi Maehashi <mockbuild@jubat.us>
-+ Initial version
+- Initial version
