--- a/tools/packaging/rpm/rpmbuild/ux/SPECS/ux.spec.in
+++ b/tools/packaging/rpm/rpmbuild/ux/SPECS/ux.spec.in
@@ -56,4 +56,4 @@ This package provides headers and libraries needed to develop applications using
 
 %changelog
 * Tue Aug 14 2012 Kenichi Maehashi <mockbuild@jubat.us>
-+ Initial version
+- Initial version
