--- a/tools/packaging/rpm/rpmbuild/jubatus-client/SPECS/jubatus-client.spec.in
+++ b/tools/packaging/rpm/rpmbuild/jubatus-client/SPECS/jubatus-client.spec.in
@@ -18,7 +18,8 @@ URL:		http://jubat.us/
 Source0:	https://github.com/downloads/jubatus/jubatus/%{target_archive}
 BuildRoot:	%(mktemp -ud %{_tmppath}/%{name}-%{version}-%{release}-XXXXXX)
 
-Requires:	pficommon >= 1.3.1
+Requires:	pficommon-devel >= 1.3.1
+Requires:	msgpack-devel
 
 %description
 Jubatus is a distributed processing framework and streaming machine learning library.
