--- a/tools/packaging/rpm/rpmbuild/jubatus-client/SPECS/jubatus-client.spec.in
+++ b/tools/packaging/rpm/rpmbuild/jubatus-client/SPECS/jubatus-client.spec.in
@@ -33,7 +33,7 @@ This package provides Jubatus C++ client headers.
 %install
 %{__rm} -rf %{buildroot}
 %{__install} -d %{buildroot}%{_includedir}/jubatus/client
-%{__cp} -rp cpp/*/*.hpp %{buildroot}%{_includedir}/jubatus/client
+%{__cp} -rp cpp/*.hpp %{buildroot}%{_includedir}/jubatus/client
 
 %clean
 %{__rm} -rf %{buildroot}
