--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,11 @@ install:
   - sudo apt-get -qq install libmsgpack-dev
   # jubatus-mpio
   - git clone https://github.com/jubatus/jubatus-mpio.git
-  - pushd jubatus-mpio && checkout develop && ./bootstrap && ./configure && make && sudo make install && popd
+  - pushd jubatus-mpio && git checkout develop && ./bootstrap && ./configure && make && sudo make install && popd
   - sudo ldconfig
   # jubatus-msgpack-rpc
   - git clone https://github.com/jubatus/jubatus-msgpack-rpc.git
-  - pushd jubatus-msgpack-rpc && checkout develop && ./bootstrap && ./configure && make && sudo make install && popd
+  - pushd jubatus-msgpack-rpc && git checkout develop && ./bootstrap && ./configure && make && sudo make install && popd
   - sudo ldconfig
   # glog
   - wget http://google-glog.googlecode.com/files/glog-0.3.2.tar.gz && tar xf glog-0.3.2.tar.gz
