--- a/tools/packaging/rpm/rpmbuild/jubatus-client/SPECS/jubatus-client.spec.in
+++ b/tools/packaging/rpm/rpmbuild/jubatus-client/SPECS/jubatus-client.spec.in
@@ -18,8 +18,8 @@ URL:		http://jubat.us/
 Source0:	https://github.com/downloads/jubatus/jubatus/%{target_archive}
 BuildRoot:	%(mktemp -ud %{_tmppath}/%{name}-%{version}-%{release}-XXXXXX)
 
-Requires:	pficommon-devel >= 1.3.1
 Requires:	msgpack-devel
+Requires:	jubatus-msgpack-rpc-devel
 
 %description
 Jubatus is a distributed processing framework and streaming machine learning library.
@@ -41,7 +41,3 @@ This package provides Jubatus C++ client headers.
 %files
 %defattr(-,root,root,-)
 %{_includedir}/jubatus/client
-
-%changelog
-* Tue Aug 14 2012 Kenichi Maehashi <mockbuild@jubat.us>
-- Initial version
