--- a/tools/packaging/rpm/rpmbuild/pficommon/SPECS/pficommon.spec.in
+++ b/tools/packaging/rpm/rpmbuild/pficommon/SPECS/pficommon.spec.in
@@ -14,7 +14,7 @@ URL:		http://pfi.github.com/pficommon/
 Source0:	%{name}-%{version}.tar.gz
 BuildRoot:	%(mktemp -ud %{_tmppath}/%{name}-%{version}-%{release}-XXXXXX)
 
-BuildRequires:	msgpack
+BuildRequires:	msgpack-devel
 BuildRequires:	python >= 2.6
 BuildRequires:	pkgconfig
 
@@ -23,6 +23,7 @@ Requires:		msgpack
 %package devel
 Summary:	Headers and libraries for pficommon
 Requires:	%{name} = %{version}-%{release}
+Requires:	msgpack-devel
 
 %description
 pficommon is a general purpose C++ library for PFI.
@@ -61,7 +62,3 @@ This package provides headers and libraries needed to develop applications using
 %post -p /sbin/ldconfig
 
 %postun -p /sbin/ldconfig
-
-%changelog
-* Tue Aug 14 2012 Kenichi Maehashi <mockbuild@jubat.us>
-- Initial version
