--- a/tools/packaging/rpm/rpmbuild/re2/SPECS/re2.spec.in
+++ b/tools/packaging/rpm/rpmbuild/re2/SPECS/re2.spec.in
@@ -8,7 +8,7 @@ Summary:	an efficient, principled regular expression library
 Group:		Development/Libraries
 License:	New BSD License
 URL:		http://re2.googlecode.com/
-Source0:	%{name}-%{version}.tar.gz
+Source0:	http://re2.googlecode.com/files/%{name}-%{version}.tgz
 BuildRoot:	%(mktemp -ud %{_tmppath}/%{name}-%{version}-%{release}-XXXXXX)
 
 %package devel
@@ -52,7 +52,3 @@ perl -pi -e 's|^(libdir)=(.+)$|$1=%{_libdir}|' Makefile
 %post -p /sbin/ldconfig
 
 %postun -p /sbin/ldconfig
-
-%changelog
-* Tue Aug 14 2012 Kenichi Maehashi <mockbuild@jubat.us>
-- Initial version
