--- a/tools/packaging/rpm/rpmbuild/jubatus/SPECS/jubatus.spec.in
+++ b/tools/packaging/rpm/rpmbuild/jubatus/SPECS/jubatus.spec.in
@@ -15,8 +15,8 @@ Source0:	%{name}-%{version}.tar.gz
 BuildRoot:	%(mktemp -ud %{_tmppath}/%{name}-%{version}-%{release}-XXXXXX)
 
 BuildRequires:	pficommon-devel >= 1.3.1
-BuildRequires:	jubatus-mpio-devel
-BuildRequires:	jubatus-msgpack-rpc-devel
+BuildRequires:	jubatus-mpio-devel >= 0.4.0
+BuildRequires:	jubatus-msgpack-rpc-devel >= 0.4.0
 BuildRequires:	msgpack-devel
 BuildRequires:	glog-devel >= 0.3.0
 BuildRequires:	zookeeper-client-devel
@@ -27,8 +27,8 @@ BuildRequires:	pkgconfig
 BuildRequires:	python >= 2.6
 
 Requires:		pficommon >= 1.3.1
-Requires:		jubatus-mpio
-Requires:		jubatus-msgpack-rpc
+Requires:		jubatus-mpio >= 0.4.0
+Requires:		jubatus-msgpack-rpc >= 0.4.0
 Requires:		msgpack
 Requires:		glog >= 0.3.0
 Requires:		zookeeper-client
