add jubatus-client.pc for RPM package

--- a/tools/packaging/rpm/rpmbuild/jubatus/SPECS/jubatus.spec.in
+++ b/tools/packaging/rpm/rpmbuild/jubatus/SPECS/jubatus.spec.in
@@ -90,6 +90,7 @@ This package provides Jubatus C++ client headers.
 %files devel
 %defattr(-,root,root,-)
 %{_libdir}/pkgconfig/jubatus.pc
+%{_libdir}/pkgconfig/jubatus-client.pc
 %{_includedir}/jubatus
 
 %files client
