move client.hpp and jubatus-client.pc to jubatus-client (fix #271)

--- a/tools/packaging/rpm/rpmbuild/jubatus/SPECS/jubatus.spec.in
+++ b/tools/packaging/rpm/rpmbuild/jubatus/SPECS/jubatus.spec.in
@@ -90,11 +90,12 @@ This package provides Jubatus C++ client headers.
 %files devel
 %defattr(-,root,root,-)
 %{_libdir}/pkgconfig/jubatus.pc
-%{_libdir}/pkgconfig/jubatus-client.pc
 %{_includedir}/jubatus
 
 %files client
+%{_libdir}/pkgconfig/jubatus-client.pc
 %{_includedir}/jubatus/client
+%{_includedir}/jubatus/client.hpp
 
 %post -p /sbin/ldconfig
 
