--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,10 @@ install:
   - wget http://apache.openmirror.de/zookeeper/zookeeper-3.4.5/zookeeper-3.4.5.tar.gz && tar xf zookeeper-3.4.5.tar.gz
   - pushd zookeeper-3.4.5/src/c && ./configure && make && sudo make install && popd
   - sudo ldconfig
+  # oniguruma
+  - wget http://www.geocities.jp/kosako3/oniguruma/archive/onig-5.9.4.tar.gz && tar xvf onig-5.9.4.tar.gz
+  - pushd onig-5.9.4 && ./configure && make && make install && popd
+  - sudo ldconfig
   # re2
   - hg clone https://re2.googlecode.com/hg re2
   - pushd re2 && make && sudo make install && popd
