--- a/tools/packaging/rpm/rpmbuild/jubatus/SPECS/jubatus.spec.in
+++ b/tools/packaging/rpm/rpmbuild/jubatus/SPECS/jubatus.spec.in
@@ -14,25 +14,23 @@ URL:		http://jubat.us/
 Source0:	%{name}-%{version}.tar.gz
 BuildRoot:	%(mktemp -ud %{_tmppath}/%{name}-%{version}-%{release}-XXXXXX)
 
-BuildRequires:	pficommon-devel >= 1.3.1
 BuildRequires:	jubatus-mpio-devel >= 0.4.2
 BuildRequires:	jubatus-msgpack-rpc-devel >= 0.4.2
 BuildRequires:	msgpack-devel
 BuildRequires:	glog-devel >= 0.3.0
 BuildRequires:	zookeeper-client-devel
-BuildRequires:	re2-devel
+BuildRequires:	oniguruma-devel >= 5.9
 BuildRequires:	ux-devel
 BuildRequires:	mecab-devel >= 0.99
 BuildRequires:	pkgconfig
 BuildRequires:	python >= 2.4
 
-Requires:		pficommon >= 1.3.1
 Requires:		jubatus-mpio >= 0.4.2
 Requires:		jubatus-msgpack-rpc >= 0.4.2
 Requires:		msgpack
 Requires:		glog >= 0.3.0
 Requires:		zookeeper-client
-Requires:		re2
+Requires:		oniguruma >= 5.9
 Requires:		ux
 Requires:		mecab >= 0.99
 Requires:		mecab-ipadic
@@ -41,10 +39,10 @@ Requires:		mecab-ipadic
 Summary:	Headers and libraries to develop engines and plugins for Jubatus Framework
 Group:		Development/Libraries
 Requires:	%{name} = %{version}-%{release}
-Requires:	pficommon-devel >= 1.3.1
 Requires:	jubatus-msgpack-rpc-devel
 Requires:	msgpack-devel
 Requires:	glog-devel >= 0.3.0
+Requires:	oniguruma-devel >= 5.9
 
 %package client
 Summary:	Jubatus C++ Client
