--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ install:
   - pushd mecab-ipadic-2.7.0-20070801 && ./configure --with-charset=utf8 && make && sudo make install && popd
   - sudo ldconfig
   # jubatus_core
-  - https://github.com/jubatus/jubatus_core.git
+  - git clone https://github.com/jubatus/jubatus_core.git
   - pushed jubatus_core && ./waf configure && ./waf install && popd
 
 
