--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ install:
   - sudo ldconfig
   # jubatus_core
   - git clone https://github.com/jubatus/jubatus_core.git
-  - pushed jubatus_core && ./waf configure && ./waf install && popd
+  - pushd jubatus_core && ./waf configure && sudo ./waf install && popd
 
 
 script:
