do ldconfig after install jubatus_core

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,7 @@ install:
   # jubatus_core
   - git clone https://github.com/jubatus/jubatus_core.git
   - pushd jubatus_core && ./waf configure && sudo ./waf install && popd
+  - sudo ldconfig
 
 
 script:
