add license file to jubadump package (refs #856)

--- a/tools/packaging/rpm/rpmbuild/jubadump/SPECS/jubadump.spec.in
+++ b/tools/packaging/rpm/rpmbuild/jubadump/SPECS/jubadump.spec.in
@@ -41,5 +41,5 @@ jubadump converts saved jubatus internal model to json.
 
 %files
 %defattr(-,root,root,-)
-%doc README.rst
+%doc README.rst LICENSE
 %{_bindir}/jubadump
