--- a/tools/packaging/rpm/rpmbuild/jubatus-core/SPECS/jubatus-core.spec.in
+++ b/tools/packaging/rpm/rpmbuild/jubatus-core/SPECS/jubatus-core.spec.in
@@ -14,19 +14,19 @@ URL:		http://jubat.us/
 Source0:	%{name}-%{version}.tar.gz
 BuildRoot:	%(mktemp -ud %{_tmppath}/%{name}-%{version}-%{release}-XXXXXX)
 
-BuildRequires:	msgpack-devel
+BuildRequires:	msgpack-devel = @MSGPACK_VERSION@
 BuildRequires:	oniguruma-devel >= 5.9
 BuildRequires:	pkgconfig
 BuildRequires:	python >= 2.4
 
-Requires:		msgpack
+Requires:		msgpack = @MSGPACK_VERSION@
 Requires:		oniguruma >= 5.9
 
 %package devel
 Summary:	Headers and libraries of Jubatus Core
 Group:		Development/Libraries
 Requires:	%{name} = %{version}-%{release}
-Requires:	msgpack-devel
+Requires:	msgpack-devel = @MSGPACK_VERSION@
 Requires:	oniguruma-devel >= 5.9
 
 %description
