--- a/tools/packaging/rpm/rpmbuild/jubatus-core/SPECS/jubatus-core.spec.in
+++ b/tools/packaging/rpm/rpmbuild/jubatus-core/SPECS/jubatus-core.spec.in
@@ -46,6 +46,7 @@ This package provides headers and libraries needed of Jubatus Core.
 %install
 %{__rm} -rf %{buildroot}
 %{__waf} install --destdir=%{buildroot}
+find %{buildroot}/%{_libdir} -name "lib*.so*" -exec chmod 755 {} \;
 
 %clean
 %{__rm} -rf %{buildroot}
