--- a/tools/packaging/rpm/rpmbuild/jubatus/SPECS/jubatus.spec.in
+++ b/tools/packaging/rpm/rpmbuild/jubatus/SPECS/jubatus.spec.in
@@ -18,7 +18,7 @@ BuildRequires:	jubatus-core-devel = @JUBATUS_CORE_VERSION@
 BuildRequires:	jubatus-mpio-devel = @JUBATUS_MPIO_VERSION@
 BuildRequires:	jubatus-msgpack-rpc-devel = @JUBATUS_MSGPACK_RPC_VERSION@
 BuildRequires:	msgpack-devel = @MSGPACK_VERSION@
-BuildRequires:	apache-log4cxx-devel = @LOG4CXX_VERSION@
+BuildRequires:	log4cxx-devel = @LOG4CXX_VERSION@
 BuildRequires:	zookeeper-client-devel = @ZOOKEEPER_VERSION@
 BuildRequires:	oniguruma-devel >= 5.9
 BuildRequires:	ux-devel = @UX_VERSION@
@@ -30,7 +30,7 @@ Requires:		jubatus-core = @JUBATUS_CORE_VERSION@
 Requires:		jubatus-mpio = @JUBATUS_MPIO_VERSION@
 Requires:		jubatus-msgpack-rpc = @JUBATUS_MSGPACK_RPC_VERSION@
 Requires:		msgpack = @MSGPACK_VERSION@
-Requires:		apache-log4cxx = @LOG4CXX_VERSION@
+Requires:		log4cxx = @LOG4CXX_VERSION@
 Requires:		zookeeper-client = @ZOOKEEPER_VERSION@
 Requires:		oniguruma >= 5.9
 Requires:		ux = @UX_VERSION@
@@ -43,7 +43,7 @@ Group:		Development/Libraries
 Requires:	%{name} = %{version}-%{release}
 Requires:	jubatus-msgpack-rpc-devel = @JUBATUS_MSGPACK_RPC_VERSION@
 Requires:	msgpack-devel = @MSGPACK_VERSION@
-Requires:	apache-log4cxx-devel = @LOG4CXX_VERSION@
+Requires:	log4cxx-devel = @LOG4CXX_VERSION@
 Requires:	oniguruma-devel >= 5.9
 
 %package client
