fix RHEL version check to support 6.x / 7.x variants

--- a/tools/packaging/rpm/rpmbuild/jubatus-release/SPECS/jubatus-release.spec.in
+++ b/tools/packaging/rpm/rpmbuild/jubatus-release/SPECS/jubatus-release.spec.in
@@ -15,9 +15,9 @@ URL:		http://jubat.us/
 Source0:	jubatus.repo
 BuildRoot:	%(mktemp -ud %{_tmppath}/%{name}-%{version}-%{release}-XXXXXX)
 
-BuildRequires:	redhat-release = %{package_version}
+BuildRequires:	redhat-release >= %{package_version}
 
-Requires:		redhat-release = %{package_version}
+Requires:		redhat-release >= %{package_version}
 
 %description
 Yum Repository for Jubatus and its dependencies.
