--- a/tools/packaging/rpm/rpmbuild/oniguruma/SPECS/oniguruma.spec.in
+++ b/tools/packaging/rpm/rpmbuild/oniguruma/SPECS/oniguruma.spec.in
@@ -7,8 +7,8 @@ Release:	%{package_release}%{?dist}
 Summary:    Regular expression library
 Group:		Development/Libraries
 License:	BSD
-URL:		http://www.geocities.jp/kosako3/oniguruma/
-Source0:	http://www.geocities.jp/kosako3/oniguruma/archive/onig-%{version}.tar.gz
+URL:		https://github.com/kkos/oniguruma/
+Source0:	https://github.com/kkos/oniguruma/releases/download/v%{version}/onig-%{version}.tar.gz
 BuildRoot:	%(mktemp -ud %{_tmppath}/%{name}-%{version}-%{release}-XXXXXX)
 
 %package devel
