--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ install:
   - pushd zookeeper-3.4.6/src/c && ./configure && make && sudo make install && popd
   - sudo ldconfig
   # oniguruma
-  - wget http://www.geocities.jp/kosako3/oniguruma/archive/onig-5.9.4.tar.gz && tar xvf onig-5.9.4.tar.gz
-  - pushd onig-5.9.4 && ./configure && make && sudo make install && popd
+  - wget https://github.com/kkos/oniguruma/releases/download/v5.9.6/onig-5.9.6.tar.gz && tar xvf onig-5.9.6.tar.gz
+  - pushd onig-5.9.6 && ./configure && make && sudo make install && popd
   - sudo ldconfig
   # re2
   - hg clone https://re2.googlecode.com/hg re2
