--- a/tools/packaging/rpm/rpmbuild/jubadump/SPECS/jubadump.spec.in
+++ b/tools/packaging/rpm/rpmbuild/jubadump/SPECS/jubadump.spec.in
@@ -15,12 +15,12 @@ Source0:	%{name}-%{version}.tar.gz
 BuildRoot:	%(mktemp -ud %{_tmppath}/%{name}-%{version}-%{release}-XXXXXX)
 
 BuildRequires:	msgpack-devel = @MSGPACK_VERSION@
-BuildRequires:	jubatus-core-devel = @JUBATUS_CORE_VERSION@
+BuildRequires:	jubatus-core-devel >= @JUBATUS_CORE_VERSION@
 BuildRequires:	pkgconfig
 BuildRequires:	python >= 2.4
 
 Requires:		msgpack = @MSGPACK_VERSION@
-Requires:		jubatus-core = @JUBATUS_CORE_VERSION@
+Requires:		jubatus-core >= @JUBATUS_CORE_VERSION@
 
 %description
 jubadump converts saved jubatus internal model to json.
