--- a/.travis.yml
+++ b/.travis.yml
@@ -31,15 +31,17 @@ install:
   - pushd onig-5.9.6 && ./configure && make && sudo make install && popd
   - sudo ldconfig
   # ux
-  - wget http://ux-trie.googlecode.com/files/ux-0.1.9.tar.bz2 && tar xf ux-0.1.9.tar.bz2
-  - pushd ux-0.1.9 && ./waf configure && ./waf build && sudo ./waf install && popd
+  - wget https://github.com/hillbig/ux-trie/archive/0.1.9.tar.gz -O ux-trie-0.1.9.tar.gz && tar xf ux-trie-0.1.9.tar.gz
+  - pushd ux-trie-0.1.9 && ./waf configure && ./waf build && sudo ./waf install && popd
   - sudo ldconfig
   # mecab
-  - wget http://mecab.googlecode.com/files/mecab-0.996.tar.gz && tar xf mecab-0.996.tar.gz
+  # Note: Using Google Drive URL from http://taku910.github.io/mecab/#download
+  - wget "https://drive.google.com/uc?export=download&id=0B4y35FiV1wh7cENtOXlicTFaRUE" -O mecab-0.996.tar.gz && tar xf mecab-0.996.tar.gz
   - pushd mecab-0.996 && ./configure --enable-utf8-only && make && sudo make install && popd
   - sudo ldconfig
   # mecab-ipadic
-  - wget http://mecab.googlecode.com/files/mecab-ipadic-2.7.0-20070801.tar.gz && tar xf mecab-ipadic-2.7.0-20070801.tar.gz
+  # Note: Using Google Drive URL from http://taku910.github.io/mecab/#download
+  - wget "https://drive.google.com/uc?export=download&id=0B4y35FiV1wh7MWVlSDBCSXZMTXM" -O mecab-ipadic-2.7.0-20070801.tar.gz && tar xf mecab-ipadic-2.7.0-20070801.tar.gz
   - pushd mecab-ipadic-2.7.0-20070801 && ./configure --with-charset=utf8 && make && sudo make install && popd
   - sudo ldconfig
   # jubatus_core
