--- a/tools/packaging/rpm/rpmbuild/mecab-ipadic/SPECS/mecab-ipadic.spec.in
+++ b/tools/packaging/rpm/rpmbuild/mecab-ipadic/SPECS/mecab-ipadic.spec.in
@@ -16,7 +16,7 @@ Group:		Applications/Text
 License:	mecab-ipadic
 URL:		http://taku910.github.io/mecab/
 # Note: Using Google Drive URL from http://taku910.github.io/mecab/#download
-Source0:	https://drive.google.com/uc?export=download&id=0B4y35FiV1wh7MWVlSDBCSXZMTXM
+Source0:	https://drive.google.com/uc?export=download&id=0B4y35FiV1wh7MWVlSDBCSXZMTXM#/%{target_archive}
 BuildRoot:	%(mktemp -ud %{_tmppath}/%{name}-%{version}-%{release}-XXXXXX)
 
 # mecab-config command (in mecab package) is required to configure mecab-ipadic
