--- a/tools/packaging/rpm/rpmbuild/mecab/SPECS/mecab.spec.in
+++ b/tools/packaging/rpm/rpmbuild/mecab/SPECS/mecab.spec.in
@@ -8,8 +8,7 @@ Summary:	Yet Another Part-of-Speech and Morphological Analyzer
 Group:		Applications/Text
 License:	BSD / LGPL 2.1 / GPL 2
 URL:		http://taku910.github.io/mecab/
-# Note: Using Google Drive URL from http://taku910.github.io/mecab/#download
-Source0:	https://drive.google.com/uc?export=download&id=0B4y35FiV1wh7cENtOXlicTFaRUE#/%{name}-%{version}.tar.gz
+Source0:	%{name}-%{version}.tar.gz
 Patch0:		mecab-fix-dicdir.patch
 BuildRoot:	%(mktemp -ud %{_tmppath}/%{name}-%{version}-%{release}-XXXXXX)
 
