--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
   - pushd jubatus-msgpack-rpc/cpp && git checkout develop && ./bootstrap && ./configure --with-jubatus-mpio=/usr/local && make && sudo make install && popd
   - sudo ldconfig
   # zookeeper
-  - wget http://apache.openmirror.de/zookeeper/zookeeper-3.4.8/zookeeper-3.4.8.tar.gz && tar xf zookeeper-3.4.8.tar.gz
+  - wget http://mirrors.ocf.berkeley.edu/apache/zookeeper/zookeeper-3.4.8/zookeeper-3.4.8.tar.gz && tar xf zookeeper-3.4.8.tar.gz
   - pushd zookeeper-3.4.8/src/c && ./configure && make && sudo make install && popd
   - sudo ldconfig
   # oniguruma
