--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ install:
 
 
 script:
-  - ./waf configure --enable-zookeeper --enable-mecab --enable-ux --enable-opencv
+  - ./waf configure --enable-zookeeper --enable-mecab --enable-ux --enable-opencv --enable-python2
   - ./waf build --checkall
 
 branches:
